styles.css
body {
    background-color: black;
    color: white;
    height: 100vh;
    margin: 0;
    font-family: "Electrolize", sans-serif;
}

h1,
input,
button,
p {
    margin: 0;
}

a {
    color: white;
}

#top-container {
    display: flex;
    width: 100vw;
}

#sidebar {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 12vw;
    border: 2px solid rgb(30, 30, 30);
    margin: 16px;
    margin-right: 8px;
    margin-bottom: 0;
    border-radius: 8px;
    background-color: black;
}

#sidebar-input {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 8px;
    margin-bottom: 16px;
    height: 32px;
    text-align: center;
    border-radius: 8px;
    border: 2px solid rgb(30, 30, 30);
    background-color: black;
    color: white;
    font-family: "Electrolize", sans-serif;
}

.sidebar-button-container {
    display: flex;
    width: 9vw;
    height: 32px;
    border: 2px solid none;
    border-radius: 8px;
    margin-bottom: 4px;
}

.sidebar-streamer-button {
    border: none;
    text-align: start;
    border-top-left-radius: 8px;
    border-bottom-left-radius: 8px;
    box-sizing: border-box;
    width: 9vw;
    padding-right: 4vw;
    color: white;
    background-color: #9146ff;
    font-family: "Electrolize", sans-serif;
}

.sidebar-streamer-button:hover {
    cursor: pointer;
    background-color: #6441a5;
}

.sidebar-delete-button {
    border: none;
    box-sizing: content-box;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    width: 2vw;
    background-color: #9146ff;
    color: white;
    font-family: "Electrolize", sans-serif;
}

.sidebar-delete-button:hover {
    cursor: pointer;
    background-color: #ae3636;
}

#stream {
    width: 88vw;
    height: 90vh;
    border-radius: 8px;
    margin: 16px;
    margin-left: 0;
    margin-bottom: 0;
}

#stream-header {
    display: flex;
    align-items: center;
    height: 5vh;
    background-color: black;
    border-radius: 8px;
    margin-bottom: 8px;
    border: 2px solid rgb(30, 30, 30);
}

#stream-name {
    margin-left: 16px;
    font-size: larger;
}

#stream-frame-container,
#stream-frame {
    width: calc(88vw - 2px);
    height: calc(85vh - 8px - 4px - 2px);
    border: 1px solid rgb(30, 30, 30);
    border-radius: 8px;
}

#footer {
    display: flex;
    align-items: center;
    justify-content: start;
    width: calc(100vw - 32px - 4px);
    height: 5vh;
    margin: 16px;
    margin-top: 8px;
    border: 2px solid rgb(30, 30, 30);
    border-radius: 8px;
    background-color: black;
}

#footer-logo {
    width: 32px;
    margin-left: 8px;
}

#footer-paragraph {
    color: rgb(150, 150, 150);
    margin-left: 4px;
}

